# rever

./: Cargo.toml  FUTURE_SYNTAX.md  README.md  SYNTAX.md  a  b  diff  grammar.bnf  grammar_v1.bnf  grammar_v2.bnf  how-branching-logic-should-be-organized.txt  janus.lang  more  rationale.md  rever.lang  sample1.rir  syntax.txt
examples/: brainfuck.rvr  chacha20.rvr  decl.rev  decl.rvr  div_mod.rvr  factor.rvr  fib.rvr  fizzbuzz.rvr  hello_world.rvr  int_to_str.rvr  lisp_calc.rvr  perm-to-code.rvr  run-length-enc-stack.rvr  run-length-enc.rvr  speck.rvr  sqrt.rvr  stack-operations.rvr  stdlib.rvr  teax.rvr
src/: ast.rs  compile.rs  hir.rs  janus.rs  janus_extended.rs  lib.rs  main.rs  parse.rs  repl.rs  rever.rs  reverse.rs  span.rs  token.rs  tokenize.rs  typeck.rs
src/ast/: arg.rs  binexpr.rs  block_expr.rs  expr.rs  expression.rs  factor.rs  function.rs  item.rs  literal.rs  lvalue.rs  mod.rs  module.rs  param.rs  procedure.rs  program.rs  statement.rs  term.rs  types.rs
src/hir/: expr.rs  function.rs  item.rs  literal.rs  lvalue.rs  module.rs  procedure.rs  statement.rs  term.rs  types.rs
src/interpret/: intrinsic.rs  io.rs  mod.rs  scope.rs  stack.rs  value.rs
src/interpret/ast/: expr.rs  item.rs  literal.rs  lvalue.rs  mod.rs  module.rs  param.rs  procedure.rs  statement.rs  term.rs  types.rs
src/janus/: compile.rs  expr.rs  interpret.rs  lvalue.rs  mod.rs  parse.rs  program.rs  statement.rs
src/janus/ast/: decl.rs  expr.rs  factor.rs  item.rs  literal.rs  lvalue.rs  mod.rs  pred.rs  procedure.rs  program.rs  (+1 more)
src/rever/: compile.rs  mod.rs  tokenize.rs
(+10 files in other folders)
